language/move-lang/tests/move_check/translated_ir_tests/commands/break_outside_loop_in_else.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/break_outside_loop_in_else.move:2:24 ───
   │
 2 │     if (false) () else break;
   │                        ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body
   │

