language/move-lang/tests/move_check/translated_ir_tests/commands/break_outside_loop_in_else.move
fun main() {
    if (false) () else break;
}

// check: break outside loop
